# BackEnd/internal/handler/api/router.go
@@ -8,24 +8,32 @@ import (
 func initHandler(svc *svc.ServiceContext) []Handler {
 	// new logics
 	var (
-		todoLogic       = logic.NewTodo(svc)
-		approvalLogic   = logic.NewApproval(svc)
+		groupLogic      = logic.NewGroup(svc)
 		userLogic       = logic.NewUser(svc)
 		departmentLogic = logic.NewDepartment(svc)
+		todoLogic       = logic.NewTodo(svc)
+		approvalLogic   = logic.NewApproval(svc)
+		chatLogic       = logic.NewChat(svc)
 	)
 
 	// new handlers
 	var (
+		chat       = NewChat(svc, chatLogic)
+		upload     = NewUpload(svc, chatLogic)
+		group      = NewGroup(svc, groupLogic)
+		user       = NewUser(svc, userLogic)
 		department = NewDepartment(svc, departmentLogic)
 		todo       = NewTodo(svc, todoLogic)
 		approval   = NewApproval(svc, approvalLogic)
-		user       = NewUser(svc, userLogic)
 	)
 
 	return []Handler{
+		chat,
+		upload,
+		group,
+		user,
 		department,
 		todo,
 		approval,
-		user,
 	}
 }
